--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=journalApp
+
+spring.data.mongodb.host = mongodb
+spring.data.mongodb.port = 27017
+spring.data.mongodb.username = admin
+spring.data.password = admin
+spring.data.mongodb.database = journaldb
