--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.application.name=journalApp
 spring.data.mongodb.host = localhost
 spring.data.mongodb.port = 27017
 spring.data.mongodb.database = journaldb
-
+spring.data.mongodb.auto-index-creation = true
 logging.level.org.springframework.data.mongodb=DEBUG
