--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=journalApp
 
-spring.data.mongodb.host = localhost
-spring.data.mongodb.port = 27017
+spring.data.mongodb.uri = mongodb+srv://divakarvelagacherla:tTZNY8oEnth7ofow@cluster0.zzv2x.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database = journaldb
 spring.data.mongodb.auto-index-creation = true
+
 logging.level.org.springframework.data.mongodb=DEBUG
